# effect-log

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/effect_log/: __init__.py  classify.py  effect_log_native.pyi
bindings/python/python/effect_log/libeffect_log_native.dylib.dSYM/Contents/: Info.plist
bindings/python/python/effect_log/libeffect_log_native.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libeffect_log_native.dylib.yml
bindings/python/python/effect_log/middleware/: __init__.py  anthropic.py  bub.py  crewai.py  langgraph.py  openai_agents.py  pydantic_ai.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_basic.py  test_classify.py  test_classify_mode.py  test_middleware.py
blog/: show-hn.md
crates/effect-log-core/: Cargo.toml
crates/effect-log-core/src/: error.rs  executor.rs  lib.rs  recovery.rs  registry.rs  types.rs  wal.rs
crates/effect-log-core/src/storage/: memory.rs  mod.rs  sqlite.rs
crates/effect-log-core/tests/: crash_recovery.rs
examples/: README.md  anthropic_integration.py  crash_recovery.py  crewai_integration.py  e2e_anthropic.py  e2e_bub.py  e2e_crewai.py  e2e_langgraph.py  e2e_openai_agents.py  e2e_pydantic_ai.py  langgraph_integration.py  openai_agents_integration.py  pydantic_ai_integration.py
