[workspace]
resolver = "2"
members = [
    "crates/effect-log-core",
    "bindings/python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
effect-log-core = { path = "crates/effect-log-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
