[package]
name = "effect-log-python"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "effect_log_native"
crate-type = ["cdylib"]

[features]
default = ["sqlite"]
sqlite = ["effect-log-core/sqlite"]

[dependencies]
effect-log-core = { workspace = true }
pyo3 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
