[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "effect-log"
version = "0.1.0"
description = "Semantic side-effect tracking for AI agents"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "effect_log.effect_log_native"
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
