[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ai-effectlog"
version = "0.1.0"
description = "Semantic side-effect tracking for AI agents"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Xudong" }]
keywords = ["ai", "agents", "effect-log", "side-effects", "crash-recovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/xudong963/effect-log"
Repository = "https://github.com/xudong963/effect-log"
Issues = "https://github.com/xudong963/effect-log/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "effect_log.effect_log_native"
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
